fixed spacing

--- a/app/assets/stylesheets/pages/_recipe_index.scss
+++ b/app/assets/stylesheets/pages/_recipe_index.scss
@@ -17,7 +17,7 @@ a {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 27rem;
+  width: 20rem;
   height: 7.5rem;
   background: #fff;
 }
